# Authentification-System

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.09870c2  ML_proj.ipynb  README.md  cropimage.cpp  cropimage.hpp  csv.hpp  csv_file.cpp  csv_file.hpp  database.cpp  database.hpp  decision_tree_testing.cpp  decision_tree_testing.hpp  login.ui.qml  mail  mail.cpp  mail.hpp  main  main.cpp  main1.cpp  new.txt  password.cpp  password.hpp  questions.cpp  tests.cpp  tests.h  tests.hpp
.cache/clangd/index/: Facedata.hpp.89EDD0688011B553.idx  class.cpp.D489BF5D354C5D58.idx  classification.cpp.BFD48411CE3D9C19.idx  classification.hpp.79EF2781BCB13451.idx  cropimage.cpp.DD76FD130B7A37FB.idx  cropimage.hpp.57EB5AAB2B59DC0F.idx  fisher.cpp.629657E6CC18A52F.idx  fisher.hpp.F17DDAC5906AED59.idx  main.cpp.DF150D7011B0E1E2.idx  vector_id.hpp.75B038D05BAEEF7C.idx
Test Interface/: login_creator.ui
Test Interface/Project/: login.ui.qml
Test Interface/Project/ExploringUI/: CMakeLists.txt  qmlmodules
Test Interface/Project/ExploringUI/content/: Screen01.ui.qml
Test Interface/Project/ExploringUI/imports/ExploringUI/: DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml
Test Interface/TestProject/: main.cpp  testproject.ui
Test Interface/camera/: camera.cpp  camera.h  camera.ui
TestInterface/: working_interface.ui
TestInterface/Interface/: working_interface.ui
TestInterface/Project/: camera.ui  login.ui.qml
TestInterface/Project/ExploringUI/: ExploringUI.qmlproject  ExploringUI.qmlproject.qtds
TestInterface/Project/ExploringUI/content/: App.qml
TestInterface/Project/ExploringUI/imports/: CMakeLists.txt
TestInterface/Project/ExploringUI/imports/ExploringUI/: CMakeLists.txt  qmldir
TestInterface/Project/ExploringUI/src/: import_qml_plugins.h
TestInterface/Project/authentification_system/: CMakeLists.txt  main.cpp
TestInterface/TestProject/: CMakeLists.txt  testproject.cpp  testproject.h  testproject.ui.autosave
TestInterface/camera/: camera.cpp  camera.h  main.cpp
Weekly reports/: Alexandru Serban  Budura Bogdan  Cezara Petrui  Jasmine Watissee  Mija Pilkaite  MoreiraMachado.md  Paula Gonzalez Alvarez  Reports  Romain Poggi  Santorin Yu  Sebastian Simon  Sophie-Claire Antoun  VictorLasocki.md  Week1  Week1Report.txt  Week2Report.txt  Week3Report.txt  Week4Report.txt  Week5Report.txt  Week6Report.txt  Yassine TURKI
config/: CMakeLists.txt  config.h.in
doc/: project_design.md
images/: CMakeLists.txt
images/Groups/: CMakeLists.txt
images/Storing/: CMakeLists.txt
images/Team/: CMakeLists.txt
images/Testing/: CMakeLists.txt
libs/: vimrc
libs/Poco/: CMakeLists.txt
libs/opencv/: CMakeLists.txt
libs/openssl/: CMakeLists.txt
libs/qt/: CMakeLists.txt
mail.dSYM/Contents/Resources/DWARF/: mail
main.dSYM/Contents/Resources/DWARF/: main
resources/: stylesheet.qss
resources/haarcascades/: CMakeLists.txt
resources/yalefaces/: a.sh
sources/: CMakeLists.txt  ClassData.cpp
sources/Cascade/: CC1.cpp  CC1.h  CMakeLists.txt  Cascade_Object_Detector.cpp  Cascade_Object_Detector.hpp  cascade.cpp  cascade.hpp  cascade_Base.cpp  cascade_Base.hpp  cascade_conformity.cpp  cascade_conformity.hpp  cascade_detect_cv.cpp  cascade_detect_cv.hpp  conformity.cpp  conformity.hpp
sources/Classification/: CMakeLists.txt  \  classification.cpp  classification.hpp  classifier.cpp  classifier.hpp  decision_tree_testing.cpp  decision_tree_testing.hpp  decisiontree.cpp  decisiontree.hpp  knn.cpp  knn.hpp  knn_testing.cpp  knn_testing.hpp  main.cpp  vector_id.hpp
sources/CropImage/: CMakeLists.txt  cropimage.cpp  cropimage.hpp
sources/Cropimage/: CMakeLists.txt  cropimage.cpp  cropimage.hpp
sources/Croping/: CMakeLists.txt  croping.cpp
sources/Cropping/: CMakeLists.txt  cropimage.cpp  cropping.cpp  cropping.hpp
sources/Database/: CMakeLists.txt  csv.hpp  csv_file.cpp  csv_file.hpp  database.cpp  database.hpp  main.cpp  new.csv  testdatabase.cpp
sources/Detect/: CMakeLists.txt  detect.cpp  detect.hpp  detect1.cpp  detect1.hpp
sources/Detect/haarcascades/: CMakeLists.txt
sources/Interfaces/: CMakeLists.txt  Facedata.hpp  best_split_type.hpp
sources/Liveness/: CMakeLists.txt  liveness.cpp
sources/Localization/: CMakeLists.txt  HOG.cpp  HOG.hpp  cascadecv.cpp  cascadecv.hpp  localizer.cpp  localizer.hpp  localizer_cascade.cpp  localizer_cascade.hpp
sources/Mail/: CMakeLists.txt  mail  mail.cpp  mail.hpp  mail1.cpp  main.cpp  temp.cpp
sources/Mail/mail.dSYM/Contents/: Info.plist
sources/Mail/mail.dSYM/Contents/Resources/DWARF/: mail
sources/Model/: CMakeLists.txt  model.cpp  model.hpp
sources/Password/: CMakeLists.txt  main.cpp  password.cpp  password.hpp  profile.cpp  profile.hpp  test_profile.cpp  tests.cpp  tests.hpp
sources/Rescale/: CMakeLists.txt  rescale.cpp  rescale.hpp
sources/TestCameraCapture/: test_sebi.cpp
sources/TestCameraCapture/BogdanBudura/: pula.txt
sources/TestCameraCapture/bogdan/: CMakeLists.txt  test.cpp
sources/Vectorization/: CMakeLists.txt  LinearDiscriminantAnalysis.h  Vectorizer.cpp  Vectorizer.hpp  cvfisher.cpp  eigenvalue_decomposition.cpp  fisher.cpp  fisher.hpp  lda1.cpp  vectorizer.cpp  vectorizer.hpp
sources/build-Mail-Qt_6_2_4_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
sources/build-Mail-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-52567a724f845c4a6fa4.json  cmakeFiles-v1-4acced307348dc084552.json  codemodel-v2-0ae5dadeb3d8f759e872.json  index-2023-01-15T20-14-15-0050.json  target-Mail-Debug-97b9270bced1d09e95de.json
sources/build-Mail-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
sources/camera/: CMakeLists.txt  CMakeLists1.txt  asmOpenCV.h  camera.cpp  camera.h  camera.ui  camera.ui.autosave  config.h.in
test/: CMakeLists.txt  a.sh  test.cpp
test/images/: CMakeLists.txt  person1_1.pgm  person1_2.pgm.pgm  person1_3.pgm  person1_4.pgm  person2_1.pgm  person2_2.pgm  person2_3.pgm  person2_4.pgm  person3_1.pgm  person3_2.pgm  person3_3.pgm  person3_4.pgm
(+1 files in other folders)
