add_library(images INTERFACE
    person1_4.pgm
    person3_2.pgm
    image1.jpg
    person2_1.pgm
    person3_3.pgm
    image2.jpg
    person2_2.pgm
    person3_4.pgm
    person1_1.pgm
    person2_3.pgm
    yassine.jpg
    person1_2.pgm.pgm
    person2_4.pgm
    yassineout.jpg
    person1_3.pgm
    person3_1.pgm
)
